feat: add applicant profile edit

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -161,7 +161,7 @@
     "change-pp": "Cambiar foto de perfil",
     "change-linkedin-url": "URL de LinkedIn",
     "change-cv-url": "URL de Resumen o CV",
-    "change-portoflio-url": "URL de portafolio",
+    "change-portfolio-url": "URL de portafolio",
     "applicant-title": "Perfil profesional",
     "discard-changes": "Descartar cambios"
   },
