feat: add routing validations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,7 +7,9 @@
     "home": "Home",
     "applications": "Applications",
     "recruitments": "Recruitments",
-    "organization": "Organization",
+    "company": "Company",
+    "jobs": "Jobs",
+    "profile": "Profile",
     "settings": "Settings",
     "switch-team": "Switch Team",
     "create-organization" : "Create organization",
