--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -7,7 +7,9 @@
     "home": "Inicio",
     "applications": "Postulaciones",
     "recruitments": "Reclutamientos",
-    "organization": "Organización",
+    "company": "Empresa",
+    "jobs": "Trabajos",
+    "profile": "Perfil",
     "settings": "Configuración",
     "switch-team": "Cambiar Equipo",
     "create-organization" : "Crear organización",
