--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,6 +3,28 @@
     "go-back-btn-label": "Volver atrás",
     "hello": "Hola"
   },
+  "disable-jobpost": "Desactivar publicación",
+  "enable-jobpost": "Activar publicación",
+  "accept": "Aceptar",
+  "cancel": "Cancelar",
+  "save": "Guardar",
+  "delete": "Borrar",
+  "edit": "Editar",
+  "add": "Nuevo",
+  "close": "Cerrar",
+  "create": "Crear",
+  "back": "Atrás",
+  "next": "Siguiente",
+  "finish": "Finalizar",
+  "search": "Buscar",
+  "upload": "Subir",
+  "download": "Descarga",
+  "send": "Enviar",
+  "yes": "Sí",
+  "no": "No",
+  "view": "Ver",
+  "loading": "Cargando...",
+  "edit-jobPost": "Editar publicación",
   "navbar": {
     "home": "Inicio",
     "applications": "Postulaciones",
@@ -112,8 +134,10 @@
   "recruitment-card": {
     "start-date-label": "Fecha de Inicio",
     "recruitment-status-label": "Estado de Reclutamiento",
-    "job-post-status-label": "Estado de Publicación de Oferta",
-    "organizer-label": "Organizador"
+    "job-post-status-label": "Publicación",
+    "organizer-label": "Organizador",
+    "open": "Abierto",
+    "closed": "Cerrado"
   },
   "recruitment": {
     "title": "Procesos de reclutamiento",
@@ -134,10 +158,15 @@
     },
     "dashboard": {
       "add-phase-lbl": "Agregar fase",
+      "edit-post": "Editar publicación",
+      "finish-recruitment": "Finalizar reclutamiento",
+      "reopen": "Reactivar reclutamiento",
+      "type_1": "Escribe",
+      "type_2": "para continuar",
       "add-candidates-lbl": "Agregar candidatos",
       "recruitment-settings-lbl": "Configuración",
       "candidates-counter": " Candidatos",
-      "phases-counter": " Etapas",
+      "phases-title": " Etapas",
       "candidates-table": {
         "phases-header": "Fases de reclutamiento",
         "phase-lbl": "Fase",
