feat: add recruiter dashboard cards

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,20 @@
     "go-back-btn-label": "Go back",
     "hello": "Hello"
   },
+  "email": "Email",
+  "company": "Company",
+  "all": "all",
+  "CV": "CV",
+  "job": "Job",
+  "recruitment-phase": "Recruitment phase",
+  "phase-description": "Phase description",
+  "actions": "Actions",
+  "applicant": "Applicant",
+  "view-applicants": "View all applicants",
+  "no-applications-found-message": "No applications found",
+  "application-date": "Application date",
+  "active": "Active",
+  "finished": "Finished",
   "showing": "Showing",
   "disable-jobpost": "Disable post",
   "enable-jobpost": "Enable post",
