--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,6 +3,20 @@
     "go-back-btn-label": "Volver atrás",
     "hello": "Hola"
   },
+  "email": "Correo",
+  "company": "Compañía",
+  "all": "todas las",
+  "job": "Trabajo",
+  "CV": "CV",
+  "recruitment-phase": "Fase de reclutamiento",
+  "phase-description": "Descripción de la fase",
+  "actions": "Acciones",
+  "applicant": "Postulante",
+  "view-applicants": "Ver todos los postulantes",
+  "no-applications-found-message": "No se encontraron postulaciones",
+  "application-date": "Fecha de postulación",
+  "active": "Activo",
+  "finished": "Finalizado",
   "showing": "Mostrando",
   "disable-jobpost": "Desactivar publicación",
   "enable-jobpost": "Activar publicación",
