feat: add email form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,7 @@
   "email": "Email",
   "company": "Company",
   "all": "all",
+  "email-all": "Email all",
   "CV": "CV",
   "job": "Job",
   "recruitment-phase": "Recruitment phase",
