--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -7,6 +7,7 @@
   "company": "Compañía",
   "all": "todas las",
   "job": "Trabajo",
+  "email-all": "Enviar correo a todos",
   "CV": "CV",
   "recruitment-phase": "Fase de reclutamiento",
   "phase-description": "Descripción de la fase",
