feat: add edit recruitment phase for candidates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,26 @@
     "go-back-btn-label": "Go back",
     "hello": "Hello"
   },
+  "edited": "Edited",
+  "delete-phase-warn": "There are applications in this phase. Please move them to another phase before deleting.",
+  "edit-phase-title": "Edit phase",
+  "applications-lbl": "applications",
+  "confirm": "Confirm",
+  "changes": "Changes",
+  "ago-en": "ago",
+  "ago-es": "",
+  "days": "days",
+  "day": "day",
+  "hours": "hours",
+  "hour": "hour",
+  "automation": "Automation",
+  "edit-candidate-dialog": "You are now editing",
+  "to": "To",
+  "cc": "CC",
+  "email-placeholder": "Enter email",
+  "subject": "Subject",
+  "content": "Content",
+  "attachments": "Attachments",
   "email": "Email",
   "company": "Company",
   "all": "all",
