--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,6 +3,26 @@
     "go-back-btn-label": "Volver atrás",
     "hello": "Hola"
   },
+  "edited": "Editado",
+  "delete-phase-warn": "Hay postulantes en esta fase. Por favor moverlos a otra fase antes de eliminar la fase de reclutamiento.",
+  "edit-phase-title": "Editar fase",
+  "applications-lbl": "postulaciones",
+  "confirm": "Confirmar",
+  "changes": "Cambios",
+  "ago-en": "",
+  "ago-es": "Hace",
+  "days": "días",
+  "day": "día",
+  "hours": "horas",
+  "hour": "hora",
+  "automation": "Automatización",
+  "edit-candidate-dialog": "Estás editando a",
+  "to": "Para",
+  "email-placeholder": "Enter para agregar",
+  "cc": "CC",
+  "subject": "Asunto",
+  "content": "Contenido",
+  "attachments": "Adjuntos",
   "email": "Correo",
   "company": "Compañía",
   "all": "todas las",
