feat: add email history

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,8 +1,46 @@
 {
+  "received-emails": "Correos recibidos",
+  "sent-emails": "Correos entregados",
+  "search-email": "Buscar email",
+  "error-toggle-automatic-emails": "Error al editar función de correos automáticos",
+  "success-toggle-automatic-emails": "Correos automáticos actualizados con éxito",
+  "inactive": "Inactivo",
+  "automation-description-main": "Presiona el botón de abajo para activar o desactivar automatizaciones. Estos son inactivos por defecto.",
+  "automation-description": "Activa esta función para enviar correos automáticos a los candidatos en cada fase de reclutamiento.",
   "general": {
     "go-back-btn-label": "Volver atrás",
     "hello": "Hola"
   },
+  "success": "Éxito",
+  "leave-organization": {
+    "title": "Dejar organización",
+    "description": "¿Estás seguro de que deseas abandonar esta organización?",
+    "leave": "Dejar",
+    "cancel": "Cancelar",
+    "type-1": "Escribe",
+    "type-2": "para confirmar",
+    "type-error": "El texto no coincide",
+    "success": "Has abandonado la organización con éxito",
+    "owner-error": "No puedes abandonar la organización si eres el propietario",
+    "error": "Error"
+  },
+  "recruiter": "Reclutador",
+  "error": "Error",
+  "only-owner-can-remove-recruiter": "Solo el propietario de la organización puede eliminar a un reclutador",
+  "remove": "Remover",
+  "remove-recruiter": "Eliminar reclutador",
+  "remove-recruiter-msg": "¿Estás seguro de que deseas eliminar a este reclutador?",
+  "invite": "Invitar a",
+  "remove-recruiter-name-error": "El nombre del reclutador no coincide.",
+  "remove-owner-error": "No puedes eliminar al propietario de la organización.",
+  "remove-recruiter-type-1": "Escribe",
+  "remove-recruiter-type-2": "para confirmar",
+  "add-recruiter": "Agregar reclutador",
+  "recruiter-has-company": "El reclutador ya tiene una compañía",
+  "add-member-error": "No se pudo agregar al miembro. El reclutador puede estar en otra organización o no existe.",
+    "add-member-success": "Reclutador agregado con éxito",
+  "search-recruiter": "Buscar reclutador",
+  "organization-members": "Miembros de la organización",
   "email-history": "Historial de email",
   "application-for": "Postulación para",
   "edited": "Editado",
